--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -126,6 +126,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
+  width: 100%;
   background-image: url("/public/images/background-niv-facile.jpg");
   background-size: cover;
   background-position: center;
@@ -137,6 +138,7 @@ body {
   align-items: center;
   justify-content: space-between;
   height: 100%;
+  width: 100%;
 }
 .facile .container__top {
   height: 100px;
